# pybind11-demo

./: .gitignore  README.md
dpc_rm/: CMakeLists.txt  CMakeLists_bak.txt  main.py
dpc_rm/binding/: main.cpp
dpc_rm/common/: alg_lib.c  alg_lib.h
dpc_rm/include/: dpc_fw.h
dpc_rm/src/: dpc_fw.c
example4/: example4.cpp  example4.py  example_complile.sh
example5/: example.cpp  example.py
gamma/: gamma.cpp  gamma_compile.sh
parallel_programming/: example1  example1.cpp
